# aiokafka_service_secretaria

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
aiokafka_manager_service/kafka_producer/: kafka_producer.py
aiokafka_manager_service/services/: kafka_service.py
tests/: conftest.py  docker-compose.yml
tests/unit/kafka/: test_kafka_service.py
